# DiscreteConnection

./: CMakeLists.txt  ReadMe.md
mesh/: sphere.off
src/: Connection.cpp  Connection.h  Utility.h  main.cpp
